# fast-matrix-invsqrt

./: AGENTS.md  BENCHMARK_REPORT.md  BUGS.md  CLAUDE.md  README.md  TODO.md  baseline_rows.json  bench_polar.py  coeff_tuner.py  isqrt_core.py  isqrt_metrics.py  matrix_iroot.py  matrix_isqrt.py  matrix_solve.py  polar_dwh_bf16_jitter_metrics_suite.py  pyproject.toml  references.bib  test_scale.py  test_scale2.py  test_scale3.py  test_scale4.py  test_svd.py
archive/: BENCHMARK_DWH3_VS_ZOLO22_POST_OPT.md  BENCHMARK_DWH3_VS_ZOLO22_PRE_OPT.md  affine_iterations.py  matrix_isqrt.py  metrics.py  polar_express.py  polar_factor.py  polar_zolo.py  test_fast_iroot_fixes.py  uncoupled.py  uncoupled_p_root.md
benchmark_results/: README.md  latest_solver_benchmarks.md
benchmarks/: __init__.py  _bootstrap.py  common.py  diagnostics.py  run_benchmarks.py  solver_reporting.py  solver_utils.py  spectral_convergence.py  utils.py
coeffs/: benchmark_poly_precond.py  design_bf16_poly.py  design_local_poly.py
docs/: api.md  benchmark_decisions.md  glossary.md  implementation_status.md
experimental/: benchmark_pe2_ps_reference.py  pe2_ps_reference.py
fast_iroot/: __init__.py  api.py  apply.py  block_cg.py  chebyshev.py  chebyshev_iterative.py  coeff_tuner.py  coeffs.py  coupled.py  diagnostics.py  eval.py  gawlik.py  inv_fourthroot.py  lu_ir.py  main.py  metrics.py  nonspd.py  nsrc.py  ops.py  precond.py  runner.py  uncoupled.py  utils.py
ideas/: progress_report.md
polar/: __init__.py  dwh.py  main.py  ops.py  runner.py  runner_fast.py  schedule_spec.py  schedules.py  zolo.py
reports/: 2025_02_25_comprehensive_p1_p4_benchmark.md  2026_02_25_solve_online_coeff_ablation_t20.md  2026_02_25_square_rhs_apply_vs_materialize.md  2026_02_26_coupled_affine_fastpath_perf.md  2026_02_26_nonspd_p1_solve_suite_t10.md  2026_02_26_p1_solve_speed_stability_comprehensive.md  2026_02_26_solve_inverse_ideas_ablation.md  README.md  benchmark_report_2026-02-21.md  benchmark_report_2026-02-22_harddir.md  chebyshev_solve_benchmark.md  less_favorable_methods.md  paterson_stockmeyer_pe2_reference_2026-02-24.md  (+1 more)
results/: bench_p1_quad.txt  (+2 more)
(+676 files in other folders)
