[project]
name = "matrix-invsqrt"
version = "0.1.0"
description = "GPU-focused inverse p-th-root kernels for SPD matrices"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "numpy>=2.4.2",
    "triton-windows>=3.6.0.post25",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.2",
    "ty>=0.0.18",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

[tool.pytest.ini_options]
pythonpath = "."
