[project]
name = "fast-matrix-inverse-roots"
version = "0.2.0"
description = "GPU-focused inverse p-th-root kernels for SPD matrices"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "JiHa Kim" },
]
keywords = ["linear-algebra", "inverse-root", "preconditioning", "pytorch", "gpu"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "numpy>=2.4.2",
    "triton-windows>=3.6.0.post25",
    "scipy>=1.17.1",
]

[project.urls]
Homepage = "https://github.com/JiHa-Kim/fast-matrix-inverse-roots"
Repository = "https://github.com/JiHa-Kim/fast-matrix-inverse-roots"
Documentation = "https://github.com/JiHa-Kim/fast-matrix-inverse-roots/tree/main/docs"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.2",
    "ty>=0.0.18",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

[tool.pytest.ini_options]
pythonpath = "."
